--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Build your own podcast player with desired structure and styles.",
   "main": "./src/main.js",
   "scripts": {
-    "build": "npm run build:iife && npm run build:cjs",
+    "build": "npm run build:iife && npm run build:cjs && npm run build:css",
+    "build:css": "node build/css.js",
     "build:iife": "FORMAT=iife rollup -c",
     "build:cjs": "FORMAT=cjs rollup -c",
     "test": "test",
@@ -35,17 +36,19 @@
   },
   "homepage": "https://github.com/jessuni/shisa#readme",
   "devDependencies": {
-    "@rollup/plugin-replace": "^2.2.1",
-    "autoprefixer": "^9.7.1",
     "eslint": "^6.6.0",
     "parcel-bundler": "^1.12.4",
+    "postcss": "^7.0.23",
+    "autoprefixer": "^9.7.1",
+    "cssnano": "^4.1.10",
+    "postcss-import": "^12.0.1",
     "rollup": "^1.27.2",
     "rollup-plugin-babel-minify": "^9.1.1",
-    "rollup-plugin-postcss": "^2.0.3"
+    "@rollup/plugin-replace": "^2.2.1",
   },
   "browserslist": [
-    "last 1 version",
-    "> 1%"
+    ">0.2%",
+    "not ie <= 11"
   ],
   "dependencies": {}
 }
