--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "postcss-import": "^12.0.1",
     "rollup": "^1.27.2",
     "rollup-plugin-babel-minify": "^9.1.1",
-    "@rollup/plugin-replace": "^2.2.1",
+    "@rollup/plugin-replace": "^2.2.1"
   },
   "browserslist": [
     ">0.2%",
