--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   },
   "homepage": "https://github.com/jessuni/shisa#readme",
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.2.1",
+    "autoprefixer": "^9.7.2",
+    "cssnano": "^4.1.10",
     "eslint": "^6.6.0",
     "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.23",
-    "autoprefixer": "^9.7.1",
-    "cssnano": "^4.1.10",
     "postcss-import": "^12.0.1",
-    "rollup": "^1.27.2",
-    "rollup-plugin-babel-minify": "^9.1.1",
-    "@rollup/plugin-replace": "^2.2.1"
+    "rollup": "^1.27.3",
+    "rollup-plugin-babel-minify": "^9.1.1"
   },
   "browserslist": [
     ">0.2%",
